# github

devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/LfH/: Bspline.h
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/jackal_helper/: collision_publisher_node
leader_follower_simulation-main/: .gitignore  README.md  multi_jackal_simulate.code-workspace  output1.txt  output2.txt  output3.txt  output5.txt
leader_follower_simulation-main/common code/: tf
leader_follower_simulation-main/src/: env.sh  horizon.py  leader_controller.py  run.py
leader_follower_simulation-main/src/multi_agent_formation/: CMakeLists.txt  package.xml
leader_follower_simulation-main/src/multi_agent_formation/configs/: costmap_common_params.yaml  teb_local_planner_params.yaml
leader_follower_simulation-main/src/multi_agent_formation/configs/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
leader_follower_simulation-main/src/multi_agent_formation/launch/: jackal_base.launch  jackal_control.launch  jackal_teleop.launch  multi_agent_formation.launch  multi_jackal.launch  spawn_jackal.launch  spawn_turtlebot.launch
leader_follower_simulation-main/src/multi_agent_formation/scripts/: follower_controller.py  leader_controller.py  multi_agent_env.py  run.py  single_agent_control.py
src/hallucination/: nav_competition_icra2022.launch
src/horizon/: CMakeLists.txt
src/teb_controller/: CMakeLists.txt  package.xml
ubuntu/: command  robot_ros  ros_code
(+961 files in other folders)
